# cmake_complex_project

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/peopleName/: CMakeLists.txt  peopleName.cpp  peopleName.h
src/sayHello/: CMakeLists.txt  sayHello.cpp  sayHello.h
